[package]
name = "rust-mongodb"
version = "0.1.0"
authors = ["T Kumagai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "1.2.0" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
serde = "1.0.130"
#async-std = { version = "1.7.0", features = ["attributes"]}
serde_json = "1.0.67"
