[package]
name = "rust-mongodb"
version = "0.1.0"
authors = ["T Kumagai <s8zmnonun@relay.firefox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "1.2.3" }
tokio = { version = "0.2.25", features = ["full"] }
tokio-stream = "0.1.7"
chrono = "0.4.19"
serde = "1.0.130"
#async-std = { version = "1.7.0", features = ["attributes"]}
serde_json = "1.0.67"
